should have fixed overflow2

--- a/css/main.scss
+++ b/css/main.scss
@@ -14,6 +14,7 @@ $letter-spacing: 20px;
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
